# python-project-83

./: .env  .gitignore  1  1.py  README.md  database.sql  makefile  pyproject.toml  setup.cfg
.github/workflows/: flask-lint-test.yml
page_analyzer/: app.py  database.sql
page_analyzer/templates/: base.html  home.html  show_url.html  urls.html
tests/: test.py
